@@ -1,9 +1,8 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 	<f:spaceless>
-
-		<div id="{settings.slickcarouselid}" class="{f:if(condition: data.tx_start_additionalclassdefined, then: ' {data.tx_start_additionalclassdefined}')}{f:if(condition: data.tx_start_additionalclass, then: ' {data.tx_start_additionalclass}')}">
+		<f:comment>#i0027, 171217, dwildt, ~</f:comment>
+		<div id="{settings.slickcarouselid}">
 			<f:render section="Main" optional="true" />
 		</div>
-
 	</f:spaceless>
 </html>
