@@ -6,7 +6,10 @@
 						* Resources/Private/Fluid/FluidStyledContent/Layouts/Default.html
 	* #t1833:	CSS Styled Content > Fluid Styled Content
 	* #i0027: Update for t3foundation 3.0
-						* additional start CSS classes are removed from slickcontent
+						* additional start CSS classes are removed from
+							* slickcarousel
+							* slickcontent
+							* slickgallery
 	* #i0026: Slick item and fluid_styled_content: div-wrap is moved from figure to figure and text. See
 						* Resources/Private/Fluid/Slick/Templates/Slickitem.html
 
